# sqlalchemy_materialized

./: .env.example  .gitignore  LICENCE  README.md  TODO.md  pyproject.toml
doc/: as_model.md  batch.md  cache_redis.md  dedupe.md  keep.md  llm.md  log.md  materialized_property.md  parse_csv.md  parse_html.md  parse_json.md  parse_jsonl.md  parse_xml.md  retry.md  template.md  timeout.md  transform.md
src/etl_decorators/: README.md  __init__.py
src/etl_decorators/_base/: README.md  __init__.py  decorators.py  streams.py
src/etl_decorators/csv/: README.md  __init__.py  decorator.py  deps.py  dialect.py  payload.py  rows.py  scalar.py
src/etl_decorators/html/: README.md  __init__.py  decorator.py  deps.py  markdown.py  payload.py
src/etl_decorators/json/: README.md  __init__.py  parse_json.py  parse_jsonl.py  payload.py
src/etl_decorators/llms/: README.md  __init__.py  llm.py  pydantic_utils.py  response_parsing.py  validators.py
src/etl_decorators/logging/: README.md  __init__.py  decorator.py
src/sqlalchemy_materialized/: __init__.py  columns.py  decorator.py  pydantic_json.py  type_utils.py
tests/: conftest.py  test_columns_make_sa_column.py  test_decorator_additional_coverage.py  test_decorator_fk_resolution.py  test_decorator_integration_sqlite.py  test_decorator_internal_helpers.py  test_decorator_list_defensive_branches.py  test_decorator_optional_return_type.py  test_decorator_retry.py  test_decorator_sa_type_mapping.py  test_decorator_unit_session_behavior.py  test_depends_on_invalidation.py  test_list_return_types.py  test_pydantic_json_column.py  test_pydantic_json_unit_coverage.py
tests/_base/: test_decorators_base.py  test_streams_base.py
tests/csv/: test_parse_csv_decorator.py
tests/html/: test_parse_html_decorator.py
tests/json/: test_parse_json_decorator.py  test_parse_jsonl_decorator.py
tests/llms/: test_llm_decorator.py  test_llm_integration.py
tests/logging/: test_log_decorator.py
tests/redis/: test_cache_clients_construction.py  test_cache_redis_integration.py  test_cache_redis_unit.py  test_callsite_hash_semantics.py  test_deps_require_redis.py  test_hashing_callsite_defensive_branches.py  test_hashing_function_code_hash.py  test_serde_defensive_branches.py  test_serde_generated_model_schema_types.py  test_serde_pydantic_json.py
tests/resilience/: test_retry.py  test_retry_validation.py  test_timeout.py
tests/sqlalchemy/: test_as_model_additional_coverage.py  test_as_model_decorator.py  test_as_model_flags.py  test_as_model_upsert.py  test_columns_make_sa_column.py  test_decorator_additional_coverage.py  test_decorator_fk_resolution.py  test_decorator_integration_sqlite.py  test_decorator_internal_helpers.py  test_decorator_list_defensive_branches.py  test_decorator_optional_return_type.py  test_decorator_retry.py  test_decorator_sa_type_mapping.py  test_decorator_unit_session_behavior.py  test_depends_on_invalidation.py  test_descriptor_defensive_branches.py  test_list_return_types.py  test_llm_materialized_property_stacking.py  test_pydantic_json_column.py  test_pydantic_json_core_coverage.py  test_pydantic_json_dirty_tracking.py  test_pydantic_json_tracking_coverage.py  test_pydantic_json_unit_coverage.py  test_soft_delete_additional_coverage.py  test_vector_indexing.py
tests/streams/: test_batch.py  test_dedupe.py  test_keep.py  test_transform.py
tests/templating/: test_template_decorator.py
tests/xml/: test_parse_xml_decorator.py
(+53 files in other folders)
