[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-decorators"
version = "0.3.0"
description = "A collection of small, focused decorators for ETL / data applications."
authors = [
    { name="Mathieu Rodic", email="mathieu@rodic.fr" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mathieurodic/etl-decorators"

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy>=1.4",
    "pydantic>=2",
]
llms = [
    "litellm",
    "pydantic>=2",
]
html = [
    "beautifulsoup4",
    "markdownify",
]
csv = [
    "pandas>=2",
]
templating = [
    "jinja2",
]
redis = [
    "redis>=5",
]
xml = [
    "lxml",
    "cssselect",
]
test = [
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "fakeredis",
    # Keep test environment fully-featured by including all optional deps.
    # NOTE: Avoid self-referential extras (e.g. "etl-decorators[xml]") here,
    # as some installers may skip/ignore them when resolving the current
    # package. Listing deps explicitly keeps `pip install -e .[test]` reliable.
    "sqlalchemy>=1.4",
    "pydantic>=2",
    "litellm",
    "beautifulsoup4",
    "markdownify",
    "pandas>=2",
    "jinja2",
    "redis>=5",
    "lxml",
    "cssselect",
]

[tool.setuptools.packages.find]
where = ["src"]
